# prospect

./: .env.example  .env.frontend.example  .env.production.example  .gitignore  docker-compose-development.yml  docker-compose-production.yml  prospect-dev.nginx.conf
backend/: Dockerfile  manage.py  pyproject.toml
backend/emails/: admin.py  api.py  models.py  schemas.py  tasks.py
backend/emails/migrations/: 0001_initial.py  0002_emailtemplate_company_types.py  0003_copy_company_type_to_m2m.py  0004_remove_emailtemplate_company_type.py  0005_alter_emailtemplate_html_body_and_more.py
backend/emails/services/: imap.py  mailgun.py  renderer.py  twenty_crm.py
backend/prospect/: asgi.py  auth_api.py  celery.py  settings.py  urls.py  wsgi.py
backend/twenty/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  tasks.py
backend/twenty/migrations/: 0001_initial.py
backend/webprospects/: admin.py  api.py  apps.py  french.py  models.py  schemas.py  services.py  tasks.py  tests.py
backend/webprospects/fixtures/: head_noun_genders.json
backend/webprospects/migrations/: 0001_initial.py  0002_webprospectrun_updated_count_and_more.py  0003_webprospectrecord_duplicate_company_id_and_more.py  0004_headnoungender.py  0005_seed_head_noun_genders.py
backend/webprospects/scrapers/: __init__.py  apmsl.py
frontend/: .env.example  Dockerfile  build-and-push.sh  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/routes/: +layout.server.ts  (+3 more)
nginx/: production.conf
(+40 files in other folders)
