[project]
name = "prospect"
version = "0.1.0"
description = "Prospecting tools"
authors = [
    {name = "Jerome Pinguet",email = "jerome@jerome.cc"}
]
license = {text = "GPLV3"}
requires-python = "^3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "django-ninja (>=1.5.3,<2.0.0)",
    "gunicorn (>=25.0.3,<26.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "Jinja2 (>=3.1.0,<4.0.0)",
    "imap-tools (>=1.9.0,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
